# llm-roofing-bot

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml
roofing_docs/gaf/: curb_appeal.txt  missing_shingles.txt  roof_carbon.txt  roofing_shingles.txt  roofing_technology.txt  silicone_roof_coating.txt  timberline_shingle.txt
roofing_docs/tamko/: checklist.txt
src/: chat_calls.py  code.py  constants.py  doc_evaluate.py  lang_graph.py  llm_response.py  vector_store.py
src/support/: roofing.txt
