[tool.poetry]
name = "wayne-roofing"
version = "0.1.0"
description = ""
authors = ["Chad Upjohn <chad.upjohn@pinnsg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.2"
langgraph = "^0.2.35"
faiss-cpu = "^1.9.0"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
